--- a/src0/image1.html
+++ b/src0/image1.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Web Page!</title>
-    </head>
-    <body>
-        <img src="cat.jpg" alt="cat" width="300" height="200">
-    </body>
+
+<head>
+    <title>My Web Page!</title>
+</head>
+
+<body>
+    <img src="cat.jpg" alt="cat" width="50%"> <!-- height="200" -->
+</body>
+
 </html>
