--- a/src0/size.html
+++ b/src0/size.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Web Page!</title>
-        <style>
-            div {
-                background-color: teal;
-                width: 500px;
-                height: 400px;
-            }
-        </style>
-    </head>
-    <body>
-        <div>
-            Hello, world!
-        </div>
-    </body>
+
+<head>
+    <title>My Web Page!</title>
+    <style>
+        div {
+            background-color: teal;
+            width: 500px;
+            height: 400px;
+            margin: 30px;
+            padding: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <div>
+        Hello, world!
+    </div>
+</body>
+
 </html>
