After first 5 lessons

--- a/src1/attribute.html
+++ b/src1/attribute.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Web Page!</title>
-        <style>
-            input[type=text] {
-                background-color: red;
-            }
+<!-- CSS with attributes used to style-->
 
-            input[type=number] {
-                background-color: yellow;
-            }
-        </style>
-    </head>
-    <body>
-        <form>
+<head>
+    <title>My Web Page!</title>
+    <style>
+        input[type=text] {
+            background-color: white;
+        }
 
-            <input name="name" type="text" placeholder="First Name">
-            <input name="name" type="text" placeholder="Last Name">
-            <input name="name" type="number" placeholder="Age">
+        input[type=number] {
+            background-color: yellow;
+        }
+    </style>
+</head>
 
-        </form>
-    </body>
+<body>
+    <form>
+
+        <input name="name" type="text" placeholder="First Name">
+        <input name="name" type="text" placeholder="Last Name">
+        <input name="name" type="number" placeholder="Age">
+
+    </form>
+</body>
+
 </html>
