--- a/src1/descendant.html
+++ b/src1/descendant.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Web Page!</title>
-        <style>
-            ol li {
-                color: red;
-            }
-        </style>
-    </head>
-    <body>
-        <ol>
-            <li>list item one</li>
-            <li>list item two</li>
-            <ul>
-                <li>sublist item one</li>
-                <li>sublist item two</li>
-            </ul>
-            <li>list item three</li>
-        </ol>
-    </body>
+
+<head>
+    <title>My Web Page!</title>
+    <style>
+        ol li {
+            color: red;
+        }
+
+        ul li {
+            color: blue;
+        }
+    </style>
+</head>
+
+<body>
+    <ol>
+        <li>list item one</li>
+        <li>list item two</li>
+        <ul>
+            <li>sublist item one</li>
+            <li>sublist item two</li>
+        </ul>
+        <li>list item three</li>
+    </ol>
+    <ul>
+        <li>sublist item one</li>
+        <li>sublist item two</li>
+    </ul>
+</body>
+
 </html>
