--- a/src1/hover.html
+++ b/src1/hover.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
+<!-- CSS when you hover the mouse on an element-->
 <html>
-    <head>
-        <title>My Web Page!</title>
-        <style>
-            button {
-                width: 200px;
-                height: 50px;
-                font-size: 24px;
-                background-color: green;
-            }
 
-            button:hover {
-                background-color: orange;
-            }
-        </style>
-    </head>
-    <body>
-        <button>Click me!</button>
-    </body>
+<head>
+    <title>My Web Page!</title>
+    <style>
+        button {
+            width: 200px;
+            height: 50px;
+            font-size: 24px;
+            background-color: green;
+        }
+
+        button:hover {
+            background-color: orange;
+        }
+    </style>
+</head>
+
+<body>
+    <button>Click me!</button>
+</body>
+
 </html>
