--- a/src5/counter3.html
+++ b/src5/counter3.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="counter3.js"></script>
-        <title>My Website</title>
-    </head>
-    <body>
-        <h1 id="counter">0</h1>
-        <button>Click Here!</button>
-    </body>
+
+<head>
+    <script src="counter3.js"></script>
+    <title>My Website</title>
+</head>
+
+<body>
+    <h1 id="counter">0</h1>
+    <button id="but1">Click Here!</button>
+</body>
+
 </html>
